[tool.poetry]
name = "repl_python3_beta_MMORPG-Server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-Cors = "^3.0.10"
Flask-SocketIO = "^5.1.1"
eventlet = "^0.32.0"
init = "^0.1.0"
pypresence = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
